# kubespray

./: .ansible-lint  .ansible-lint-ignore  .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .lycheeignore  .markdownlint.yaml  .md_style.rb  .mdlrc  .pre-commit-config.yaml  .tmux.conf  .travis.yml  .travis.yml.bak  .version  .yamllint  AGENTS.md  CHANGELOG.md  CLUSTER_UPGRADE.md  CNAME  CONTRIBUTING.md  Dockerfile  Dockerfile.slim  Dockerfile_ubuntu  Jenkinsfile  LICENSE  Makefile  OWNERS  OWNERS_ALIASES  Pipfile  README.md  RELEASE.md  SECURITY_CONTACTS  Test for release (do not merge)  Test-for-release  Test-for-release-(do-not-merge).txt  Vagrantfile  Vagrantfile.old  (+78 more)
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  advanced-issue-labeler.yml  dependabot.yml
.gitlab-ci/: build.yml  digital-ocean.yml  gce.yml  kubevirt.yml  lint.yml  molecule.yml  packet.yml  pre-commit-dynamic-stub.yml  shellcheck.yml  terraform.yml  unit-tests.yml  vagrant.yml
airgap-infra/: Dockerfile  air-gap.ini  docker_registry.sh  download_bin.sh  nginx_default.conf  setup_airgap_repo.md
ccp/: .gitignore  ccp-build.sh  ccp-deploy.sh  ccp-pull.sh  ccp.conf  deploy-config.yaml  label-nodes.sh  patch1  registry_pod.yaml  registry_svc.yaml
contrib/: collection.sh
docs/: _sidebar.md  amazonlinux.md  ambassador.md  ansible.md  ansible_collection.md  arch.md  arm64.md  atomic.md  aws-ebs-csi.md  aws.md  azure-csi.md  azure.md  bootstrap-os.md  bootstrap_os.md  calico.md  centos.md  centos8.md  cert_manager.md  cgroups.md  ci-setup.md  ci.md  cilium.md  cinder-csi.md  cloud.md  cloudstack-csi.md  cni.md  comparisons.md  containerd.md  contiv.md  coreos.md  cri-o.md  debian.md  digitalocean.md  dns-stack.md  docker-migrate.md  docker.md  docker_migrate.md  documentation.md  downloads.md  encrypting-secret-data-at-rest.md  (+53 more)
docsify/: sidebar.md
extra_playbooks/: build-cephfs-provisioner.yml  disable_nouveau.yml  inventory  migrate_openstack_provider.yml  upgrade-only-k8s.yml  wait-for-cloud-init.yml
inventory/: inventory.cfg  inventory.example  kubespray-aws-inventory.py  local-tests.cfg  localhost
ks/: pip-selfcheck.json
logo/: LICENSE  OWNERS  usage_guidelines.md
meta/: runtime.yml
pip_deps/: MarkupSafe-1.1.1-cp27-cp27mu-manylinux1_x86_64.whl  PyNaCl-1.3.0-cp27-cp27mu-manylinux1_x86_64.whl  bcrypt-3.1.6-cp27-cp27mu-manylinux1_x86_64.whl  certifi-2019.3.9-py2.py3-none-any.whl  cffi-1.12.2-cp27-cp27mu-manylinux1_x86_64.whl  cryptography-2.6.1-cp27-cp27mu-manylinux1_x86_64.whl  hvac-0.7.2-py2.py3-none-any.whl  idna-2.8-py2.py3-none-any.whl  netaddr-0.7.19-py2.py3-none-any.whl  paramiko-2.4.2-py2.py3-none-any.whl  pbr-5.1.3-py2.py3-none-any.whl  pyasn1-0.4.5-py2.py3-none-any.whl  requests-2.21.0-py2.py3-none-any.whl  urllib3-1.24.1-py2.py3-none-any.whl
playbooks/: ansible_version.yml  bastion.yaml  boilerplate.yml  bootstrap-nodes.yaml  ccp-build.yaml  ccp-deploy.yaml  check_deprecated_vars.yml  cluster.yml  etcd.yaml  facts.yml  initialize-hosts.yaml  install_etcd.yml  internal_facts.yml  ipro_for_cluster_ips.yaml  ipro_for_dnsmasq.yaml  kubedash.yaml  kubedashboard.yaml  kubedns.yaml  legacy_groups.yml  reconfigure_control_plane.yml  recover-control-plane.yml  recover_control_plane.yml  reset.yml  (+3 more)
scripts/component_hash_update/: pyproject.toml
scripts/component_hash_update/src/component_hash_update/: components.py  download.py  list_releases.graphql
(+5207 files in other folders)
