[metadata]
name = ansible-kubespray
summary = Ansible modules for installing Kubernetes
description-file =
    README.md
author = Kubespray
author-email = smainklh@gmail.com
home-page = https://github.com/kubernetes-incubator/kubespray
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    /usr/local/share/kubespray/playbooks/ =
        cluster.yml
        upgrade-cluster.yml
        scale.yml
        reset.yml
        extra_playbooks/upgrade-only-k8s.yml
    /usr/local/share/kubespray/roles = roles/*
doc_files =
    README.md
    inventory/inventory.example
config_files =
    /etc/kubespray/ =
        ansible.cfg
    /etc/kubespray/inventory/ =
        inventory/group_vars/all.yml
        inventory/group_vars/k8s-cluster.yml

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[bdist_rpm]
group = "System Environment/Libraries"
requires =
    ansible
    python-jinja2
    python-netaddr
