[metadata]
name = kubespray
summary = Ansible modules for installing Kubernetes
description-file =
    README.md
author = Kubespray
author-email = smainklh@gmail.com
license = Apache License (2.0)
home-page = https://github.com/kubernetes-incubator/kubespray
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    /usr/share/kubespray/playbooks/ =
        cluster.yml
        upgrade-cluster.yml
        scale.yml
        reset.yml
        extra_playbooks/upgrade-only-k8s.yml
    /usr/share/kubespray/roles = roles/*
    /usr/share/doc/kubespray/ =
        LICENSE
        README.md
    /usr/share/doc/kubespray/inventory/ =
        inventory/sample/hosts.ini
    /etc/kubespray/ =
        ansible.cfg
    /etc/kubespray/inventory/sample/group_vars/ =
        inventory/sample/group_vars/all.yml
        inventory/sample/group_vars/k8s-cluster.yml

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

[bdist_rpm]
group = "System Environment/Libraries"
requires =
    ansible
    python-jinja2
    python-netaddr
